--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -320,6 +320,33 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 <br><br>
 
 <div style="text-align:left">
+<center><font color="#aab0b7">
+<img src="https://i.imgur.com/i7IJQbR.png"><br><br>
+august . 20 . 2020<br>
+✄ home
+</font>
+</center><font color="#bfc4c9">
+<br>
+　　　　　　dewdrops,<br>
+　　　　　little blue dots,<br>
+　　　　　　　just a few props,<br>
+　　　　　　for finishing the rooftops !!<br>
+<br>
+　　　　　　cute houses,<br>
+　　　　　where tiny mouses<br>
+　　　　　　　garden many flowers .<br>
+<br>
+　　　　　　there come,<br>
+　　　　　everyone is welcome,<br>
+　　　　　　　in our wholesome<br>
+　　　　　　little home ♡<br><br>
+</font>
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+<div style="text-align:left">
 <center><font color="#b79e96">
 <img src="https://i.imgur.com/B0R9I5n.png"><br><br>
 july . 01 . 2020<br>
@@ -407,29 +434,6 @@ january . 30 . 2020<br>
 　　　　i can't fly<br>
 　　　　it's okay<br><br>
 </font>
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
-
-
-<div style="text-align:left">
-<center><font color="#b79e96">
-<img src="https://i.imgur.com/B0R9I5n.png"><br><br>
-january . 07 . 2020<br>
-✄ healing heart
-</font>
-</center>
-<font color="#c9bcb1">
-<br><br>
-　　everything that hurts will be healed, sad memories will become irrelevant. i believe it.<br>
-　　slowly, gently, the little pieces of my heart are gathered like miracle, the healing magic that saved me became a gift. i believe it.<br>
-　　as long as the minimum purity remains, there is hope. please, believe me...<br>
-　　i want to share this gift and heal you as i heal.
-<br><br>
-</font>
-
-
 
 <br><br><br>
 <center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
