--- a/milkywoods.html
+++ b/milkywoods.html
@@ -435,9 +435,8 @@ function getPosition(el) {
 <br><br>
 <div style="width:320px; padding:2px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
 
-<center>
-<a href="/lost"><img src="https://i.imgur.com/6Q8hBvu.png"/></a>
-</center><br>
+<a href="/fluffy"><img src="https://i.imgur.com/T3M3arC.png"/></a>　<a href="/lost"><img src="https://i.imgur.com/6Q8hBvu.png"/></a>
+<br><br>
 <a href="/pick"><img src="https://i.imgur.com/7kOPbrw.png"/></a>　<a href="/angel"><img src="https://i.imgur.com/j2NJoAH.png"/></a>
 
 </div>
