--- a/archive.html
+++ b/archive.html
@@ -321,6 +321,86 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/5ukeJnS.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>may . 07 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><sub><img src="https://i.imgur.com/lvTxY9U.gif"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i am so proud of myself !!!
+i made a lot of cute stuff these days, hopefully i will get to relax a bit now without feeling weird..
+resting is very important too, right ? i have to admit that i'm not sleeping too well lately, so i must work on that now <sub><sub><img src="https://i.imgur.com/dKRRVQl.gif"/></sub></sub>
+
+i'm excited to announce that i'm making a mobile game with bubu, and i mean, a reeeal full game with lots of stuff to do, character and home customization, everything !!
+bubu is coding while i'm making the art.
+we're already making another game together ( the one i'm writing the script for the longest time ), but that one is a bit harder and we're struggling to put everything together .. so it should take a while to release <sub><sub><img src="https://i.imgur.com/IfLNLYZ.gif"/></sub></sub>
+this mobile game should be released in a few months at most, while the other one will be finished by next year.
+we're doing our best in these projects, while we also work on many other things, so i ask you to be patient.. we will not disappoint you <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+this post will only have digital works, as i said previously, but i decided to get some stuff out of the boxes because i'm honestly getting tired of my laptop.. so i've been sewing and embroidering a bit with what i have here !
+i'm going to show you next post two dresses i made + finally, the second episode of the poofties series. give me one more week for finishing everything <sub><sub><img src="https://i.imgur.com/dMHHNVL.gif"/></sub></sub>
+
+eep let's go quickly for the cute stuff i made :
+i said i would make html games and yes, i made 3 of them !!
+they're very very simple , nothing fancy, but i'm honestly happy with the results because the art came out adorable.. i'm very satisfied.
+it was really fun to mess with text boxes and button reactions, bubu helped me a bunch and we discovered many stuff together heh <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+click the images to open the games and have fun :</pre>
+<br><br>
+
+<center><a href="/lost" target="_blank"><img src="https://i.imgur.com/6Q8hBvu.png"/></a>
+<br><br>
+<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/hesitation.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">hesitation .mp3</font></a>　
+<br><br>
+<a href="/pick" target="_blank"><img src="https://i.imgur.com/7kOPbrw.png"/></a>
+<br><br>
+<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/boring%20day.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">boring day .mp3</font></a>　
+<br><br>
+<a href="/angel" target="_blank"><img src="https://i.imgur.com/j2NJoAH.png"/></a>
+<br><br>
+<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/memory.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">memory .mp3</font></a>　
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+each game has an exclusive midi melody !
+i tried to choose instruments that could convey the characters' feelings.
+my personal favorite is "memory" because it sounds innocent and nostalgic ( i purposely reduced the sound quality )
+please tell me what you think and give suggestions, i always appreciate it <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+the least thing i did was an archive website for storaging my files : <a id="linkbjinho" href="https://file.pooftie.me" target="_blank">file.pooftie.me</a>
+it's been a LONG time since i wanted to have my own personal uploader, but i knew it would be terribly time consuming to organize everything .. it took me hours, indeed, and i haven't even reuploaded all the thousands of images i use, as that would take forever ;;
+at least i organized all my other files and also the archives here from this site, and that's good enough <sub><sub><img src="https://i.imgur.com/ms9YE3Y.gif"/></sub></sub>
+it is a relief to use my own domains for hosting things, i will try to keep everything like this from now on.
+also, the layout came out adorable :</pre><br><br>
+
+<center><img width="410px" height="auto" src="https://i.imgur.com/NGH8csB.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+by the way.. i've been taking many new photography lately, since the lighting in this house is impressively beautiful !!
+expect to see a considerable improvement in the quality of my pictures from now on ~ !
+
+that's it, let's hope for better days and lots of happy memories ..</pre><br>
+xoxo <sub><sub><img src="https://i.imgur.com/6bKgSsO.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/5ukeJnS.png"/></center>
+
+<br><br><br>
+
+
+<br>
+
 <center><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/><img src="https://i.imgur.com/QIVUnsq.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
