--- a/blog.html
+++ b/blog.html
@@ -322,6 +322,89 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img height="35px" width="auto" src="https://i.imgur.com/N4WDA98.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>august . 27 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/a8TiQfJ.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this month my website completed 3 years online !!
+i'm grateful for everything i learned by sharing my works and thoughts, and specially by your motivating messages. thank you so much <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+
+i am slowly adapting into my new, lovely routine ..
+doing all housework, taking care of myself & bubu, spending entertaining time, resting properly and still having time for working on projects and eventual commissions... it's certainly a lot to think about !!
+but thankfully, i have the time for everything, if i don't spend energy with draining things.
+i'm trying my best to keep myself away from all stressful stuff, my plans for are working quite well !
+i made a few things lately, but i was feeling the need of resting more than usual.. so i thought it was a good idea to return playing a game that is such a comfort space for me : ragnarok online
+i started a whole new account in the official brazilian server, the one i have played since i was 7. i gotta say i am growing pretty fast in there and i'm having a lot of fun exploring the new content, so you might see some updates on my gaming page with my new characters and stuff, once i get to reborn them to transcendent <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+i'm feeling pretty happy about those experiences, and i'm sure that i will get to make more progress in the projects naturally, if i don't overdo myself.
+better spending one month working wholeheartedly than rushing one week wearifully, right ? <sub><img src="https://i.imgur.com/8OvdGqX.gif"/></sub>
+i like making posts once i have a handful of things to show, and now it's the right time, so let's see what i made :
+</pre>
+<br><br>
+
+<center><a href="/fluffy" target="_blank"><img src="https://i.imgur.com/Hva2CBT.png"/></a>
+<br><br>
+<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/pinky%20promise.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">pinky promise .mp3</font></a>　
+<br></center>
+
+<br>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+this is a little dress up html game i just did for practicing some editing & basic javascript .. what do you think ? <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+i think it turned out very cute, and i'm happy to show you this lovely music box melody too. please click the teddy bear to play it yourself !
+
+after some time without making big ascii art + many requests on the symbols i use, i had the idea of making a web page for keeping my resources, <a id="linkbjinho" href="https://ascii.pooftie.me" target="_blank">ascii.pooftie.me</a> !!
+the layout is fully made with symbols ( with a bit of html magic, of course ) <sub><img src="https://i.imgur.com/mKQgU1i.gif"/></sub>
+i hope it can be useful for getting started or improving your little "text drawings" :
+</pre><br><br>
+
+<center><a href="https://ascii.pooftie.me" target="_blank"><img width="410px" height="auto" src="https://i.imgur.com/9PKbQpg.gif"/></a></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's certainly hard making stuff that look interesting with only symbols, it looks simple, but i'm proud <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i often have ideas that sound pretty random, but it's important to try and make things happen, right ?
+
+sometimes i can't get in the mood for working on my most important projects, but i try and make anything for at least make good use of my time by study & practice .. i believe this is a good way of resting while being productive !
+i find coloring very relaxing, and as i am feeling a little anxious lately, having cute drawings to color is such a bless <sub><img src="https://i.imgur.com/ldY80KV.gif"/></sub>
+so here are two of my most recent ones :
+</pre><br><br>
+
+<center><img width="330px" height="auto" src="https://i.imgur.com/nUoD8rM.png"/></center>
+<br>
+<center><img width="330px" height="auto" src="https://i.imgur.com/mgVb7Br.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i tried editing the background this time too.. i don't know if i really like it or not, but well. i like the colors & textures.
+those adorable coloring pages are from <a id="linkbjinho" href="https://ameblo.jp/jyohanna/" target="_blank">ドリーミィー・フェザー</a> !
+
+i would like to express my gratitude for you who keep reading this blog to this day, i feel really lucky for having such sweet angels following my content and wishing me good things..
+i hope you are staying safe and living happy days, even if you never got to message or support me, i still acknowledge & really appreciate your presence here. <font color="#d3a5a5" style="font-size:11px;">♡</font></pre>
+see you next time,
+<br><br>
+xoxo <sub><sub><img src="https://i.imgur.com/VuYWNMS.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img height="35px" width="auto" src="https://i.imgur.com/N4WDA98.png"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/bAE2SKx.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -533,85 +616,6 @@ xoxo <sub><sub><img src="https://i.imgur.com/1IBk2JR.gif"/></sub></sub></pre>
 <br>
 
 <center><img src="https://i.imgur.com/bAE2SKx.gif"/></center>
-
-<br><br><br>
-
-
-
-<center><img src="https://i.imgur.com/5ukeJnS.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>may . 07 . 2020</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <sub><sub><img src="https://i.imgur.com/lvTxY9U.gif"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i am so proud of myself !!!
-i made a lot of cute stuff these days, hopefully i will get to relax a bit now without feeling weird..
-resting is very important too, right ? i have to admit that i'm not sleeping too well lately, so i must work on that now <sub><sub><img src="https://i.imgur.com/dKRRVQl.gif"/></sub></sub>
-
-i'm excited to announce that i'm making a mobile game with bubu, and i mean, a reeeal full game with lots of stuff to do, character and home customization, everything !!
-bubu is coding while i'm making the art.
-we're already making another game together ( the one i'm writing the script for the longest time ), but that one is a bit harder and we're struggling to put everything together .. so it should take a while to release <sub><sub><img src="https://i.imgur.com/IfLNLYZ.gif"/></sub></sub>
-this mobile game should be released in a few months at most, while the other one will be finished by next year.
-we're doing our best in these projects, while we also work on many other things, so i ask you to be patient.. we will not disappoint you <font color="#d3a5a5" style="font-size:11px;">♡</font>
-
-this post will only have digital works, as i said previously, but i decided to get some stuff out of the boxes because i'm honestly getting tired of my laptop.. so i've been sewing and embroidering a bit with what i have here !
-i'm going to show you next post two dresses i made + finally, the second episode of the poofties series. give me one more week for finishing everything <sub><sub><img src="https://i.imgur.com/dMHHNVL.gif"/></sub></sub>
-
-eep let's go quickly for the cute stuff i made :
-i said i would make html games and yes, i made 3 of them !!
-they're very very simple , nothing fancy, but i'm honestly happy with the results because the art came out adorable.. i'm very satisfied.
-it was really fun to mess with text boxes and button reactions, bubu helped me a bunch and we discovered many stuff together heh <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
-click the images to open the games and have fun :</pre>
-<br><br>
-
-<center><a href="/lost" target="_blank"><img src="https://i.imgur.com/6Q8hBvu.png"/></a>
-<br><br>
-<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/hesitation.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">hesitation .mp3</font></a>　
-<br><br>
-<a href="/pick" target="_blank"><img src="https://i.imgur.com/7kOPbrw.png"/></a>
-<br><br>
-<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/boring%20day.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">boring day .mp3</font></a>　
-<br><br>
-<a href="/angel" target="_blank"><img src="https://i.imgur.com/j2NJoAH.png"/></a>
-<br><br>
-<sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://file.pooftie.me/a/memory.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">memory .mp3</font></a>　
-</center><br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-each game has an exclusive midi melody !
-i tried to choose instruments that could convey the characters' feelings.
-my personal favorite is "memory" because it sounds innocent and nostalgic ( i purposely reduced the sound quality )
-please tell me what you think and give suggestions, i always appreciate it <font color="#d3a5a5" style="font-size:11px;">♡</font>
-
-the least thing i did was an archive website for storaging my files : <a id="linkbjinho" href="https://file.pooftie.me" target="_blank">file.pooftie.me</a>
-it's been a LONG time since i wanted to have my own personal uploader, but i knew it would be terribly time consuming to organize everything .. it took me hours, indeed, and i haven't even reuploaded all the thousands of images i use, as that would take forever ;;
-at least i organized all my other files and also the archives here from this site, and that's good enough <sub><sub><img src="https://i.imgur.com/ms9YE3Y.gif"/></sub></sub>
-it is a relief to use my own domains for hosting things, i will try to keep everything like this from now on.
-also, the layout came out adorable :</pre><br><br>
-
-<center><img width="410px" height="auto" src="https://i.imgur.com/NGH8csB.png"/></center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-by the way.. i've been taking many new photography lately, since the lighting in this house is impressively beautiful !!
-expect to see a considerable improvement in the quality of my pictures from now on ~ !
-
-that's it, let's hope for better days and lots of happy memories ..</pre><br>
-xoxo <sub><sub><img src="https://i.imgur.com/6bKgSsO.gif"/></sub></sub></pre>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/5ukeJnS.png"/></center>
 
 <br><br><br>
 
