--- a/commissions.html
+++ b/commissions.html
@@ -398,7 +398,7 @@ all the text will be edited later on, as you wish.<br>
 　　　　<font color="#bfa57a" style="font-size:10px">instagram :</font> <a id="mm" href="https://www.instagram.com/pooftie" target="_blank" >@pooftie</a>
 　　　　<font color="#bfa57a" style="font-size:10px">tumblr :</font> <a id="mm" href="https://www.tumblr.com/blog/pooftie" target="_blank" >@pooftie</a><br><br>
 　　　　<font color="#bfa57a" style="font-size:10px">twitter :</font> <a id="mm" href="https://twitter.com/pooftie" target="_blank" >@pooftie</a>
-　　　　　<font color="#bfa57a" style="font-size:10px">discord :</font> <a id="mm" href="https://discord.gg/Y3wpCDe" target="_blank" >puf#0008</a>
+　　　　　<font color="#bfa57a" style="font-size:10px">discord :</font> <a id="mm" href="https://discord.gg/Y3wpCDe" target="_blank" >pooftie#1997</a>
 
 <br>
 
