--- a/links.html
+++ b/links.html
@@ -323,7 +323,7 @@ z-index: 3;
 <br>
 <sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> chat apps :</font><br>
 <br>
-　<font color="#7a6b6b">line </font><a id="eee" title="add link" href="https://line.me/ti/p/~pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">dscrd </font><a id="eee" title="add server" href="https://discord.gg/Y3wpCDe" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">line </font><a id="eee" title="add link" href="https://line.me/ti/p/~pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">dscrd </font><a id="eee" title="add server" href="https://dsc.gg/pooftie" target="_blank" >♡</a><br>
 </div>
 
 <div style="position:relative; float:right; overflow:hidden; border: 15px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px;">
