--- a/credits.html
+++ b/credits.html
@@ -328,8 +328,7 @@ it is difficult to be completely transparent about how much content is edited or
 <font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> dreams * unknown</font></font></font><br><br>
 
 <font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ gaming</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　graphics from <i>ragnarok online</i> ;<br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> higher than the sun * ragnarok online ost<br><br>
+<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　graphics from <i>ragnarok online</i><br><br>
 
 <font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ poofties</font></font></font><br>
 <font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> heartsng1 * unknown</font></font></font><br><br>
