--- a/recommended.html
+++ b/recommended.html
@@ -326,7 +326,15 @@ z-index: 3;
 <font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
 <br><br><br>
 
-　<a href="https://teddybear-halo.neocities.org" target="_blank"><img src="https://i.imgur.com/wZIp3Fp.gif"></a>
+　‌‌<a href="https://howtobecomeanangel.world" target="_blank"><img src="https://i.imgur.com/cPwWxGS.png"></a>
+　<a href="https://blissnet.neocities.org" target="_blank"><img src="https://i.imgur.com/m3tcSwl.png"></a>
+　<a href="https://cinni.neocities.org" target="_blank"><img src="https://i.imgur.com/LH4PdzU.png"></a>
+
+　　‌‌<br><br>　<a href="https://chelemige.neocities.org" target="_blank"><img src="https://i.imgur.com/0HaSI7R.gif"></a>
+　<a href="https://gutz.neocities.org" target="_blank"><img src="https://i.imgur.com/NB1QV8c.gif"></a>
+　<a href="https://nekomy.neocities.org" target="_blank"><img src="https://i.imgur.com/tFzrXIs.png"></a>
+
+　　‌‌<br><br>　<a href="https://teddybear-halo.neocities.org" target="_blank"><img src="https://i.imgur.com/wZIp3Fp.gif"></a>
 　<a href="https://snowy.neocities.org" target="_blank"><img src="https://i.imgur.com/Ja8LCbO.png"></a>
 　<a href="https://valentines.neocities.org" target="_blank"><img src="https://i.imgur.com/j1itU4N.gif"></a>
 
