--- a/portfolio.html
+++ b/portfolio.html
@@ -383,13 +383,9 @@ z-index: 3;
 <br>
 <img width="280px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
 <br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/AjepqtE.png">
+<img width="280px" height="auto" src="https://i.imgur.com/EahGtcV.gif">
 <br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/N8QULfr.gif">
-<br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/YRj5yhd.png">
-<br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/cEj5v0C.gif">
+<img width="280px" height="auto" src="https://i.imgur.com/OLF2amH.gif">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
