--- a/gaming.html
+++ b/gaming.html
@@ -334,7 +334,7 @@ z-index: 3;
 <img style="position:absolute; left:5px;" src="https://i.imgur.com/vA6cZGh.gif"><img style="position:absolute; left:80px; top:105px;" src="https://i.imgur.com/83XdPpp.png">
 <font color="#a37c81" style="position:absolute; left:105px; top:9px; font-size:8px;">
 <sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>pupuf</b><br><br>
-<font color="#b89196">level :</font> 102<br>
+<font color="#b89196">level :</font> 120<br>
 <font color="#b89196">job :</font> archbishop<br>
 <font color="#b89196">build :</font> exorcist<br>
 <font color="#b89196">traits :</font> quiet & caring<br>
@@ -352,12 +352,12 @@ z-index: 3;
 <img src="https://i.imgur.com/3SpWceZ.png">
 <br>
 <sub><sub><img width="20px" height="auto" src="https://i.imgur.com/Zttv8dJ.gif"></sub></sub> ‌ <b>adventure logs :</b><br>
+　‌ • thanatos tower ( ♡ )<br>
+　‌ • britoniah guild dungeon<br>
 　‌ • niflheim ( !!! )<br>
 　‌ • the plain of ida<br>
 　‌ • glast heim church<br>
 　‌ • sphinx ( ♬ )<br>
-　‌ • toy factory ( ♡ )<br>
-　‌ • payon cave<br>
 </div>
 </font>
 
@@ -367,9 +367,9 @@ z-index: 3;
 <img style="position:absolute; left:5px; top:10px;" src="https://i.imgur.com/Ww4Ptmb.gif"><img width="55px" height="auto" style="position:absolute; left:70px; top:105px;" src="https://i.imgur.com/ABu7boW.png">
 <font color="#a37c81" style="position:absolute; left:105px; top:9px; font-size:8px;">
 <sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>pufie</b><br><br>
-<font color="#b89196">level :</font> 100<br>
+<font color="#b89196">level :</font> 120<br>
 <font color="#b89196">job :</font> wanderer<br>
-<font color="#b89196">build :</font> battle<br>
+<font color="#b89196">build :</font> soloist<br>
 <font color="#b89196">traits :</font> girly & energetic<br>
 <font color="#b89196">pet :</font> angeling ( chu )<br>
 <font color="#b89196">hometown :</font> comodo<br>
@@ -385,12 +385,12 @@ z-index: 3;
 <img src="https://i.imgur.com/rRwPvpI.png">
 <br>
 <sub><sub><img width="20px" height="auto" src="https://i.imgur.com/Zttv8dJ.gif"></sub></sub> ‌ <b>adventure logs :</b><br>
-　‌ • abyss lake<br>
-　‌ • einbroch fields ( ew )<br>
-　‌ • hermit's checkers ( !? )<br>
-　‌ • suei long gon<br>
-　‌ • tatami maze ( ♬ )<br>
-　‌ • hoomga jungle ( ♪ )<br>
+　‌ • splendide<br>
+　‌ • mora village ( ♡♡♡ )<br>
+　‌ • hazy maze forest<br>
+　‌ • el dicastes ( !! )<br>
+　‌ • hvergelmir's fountain ( ♪ )<br>
+　‌ • inside ancient shrine<br>
 </div>
 </font>
 
@@ -400,7 +400,7 @@ z-index: 3;
 <img style="position:absolute; left:-5px; top:16px;" src="https://i.imgur.com/EBkBCTP.gif"><img width="43px" height="auto" style="position:absolute; left:75px; top:105px;" src="https://i.imgur.com/XPZ4Myr.png">
 <font color="#a37c81" style="position:absolute; left:105px; top:9px; font-size:8px;">
 <sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>pufs</b><br><br>
-<font color="#b89196">level :</font> 72<br>
+<font color="#b89196">level :</font> 73<br>
 <font color="#b89196">job :</font> biochemist<br>
 <font color="#b89196">build :</font> pure potter<br>
 <font color="#b89196">traits :</font> clumsy & curious<br>
@@ -418,12 +418,45 @@ z-index: 3;
 <img src="https://i.imgur.com/PGeJgd1.png">
 <br>
 <sub><sub><img width="20px" height="auto" src="https://i.imgur.com/Zttv8dJ.gif"></sub></sub> ‌ <b>adventure logs :</b><br>
+　‌ • starry coral area<br>
 　‌ • les forest ( ♡ )<br>
 　‌ • kiel hyre's academy ( !! )<br>
 　‌ • undersea tunnel<br>
 　‌ • mt. mjolnir ( ♫ )<br>
 　‌ • orc village<br>
+</div>
+</font>
+
+<br><br>
+
+<div style="position:relative; left:4%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 390px; height: 150px; line-height:10px; padding:5px;">
+<img width="80px" height="auto" style="position:absolute; left:5px; top:5px;" src="https://i.imgur.com/aD1NVPr.png"><img style="position:absolute; left:20px; top:40px;" src="https://i.imgur.com/TfqobE8.gif">
+<font color="#a37c81" style="position:absolute; left:140px; top:9px; font-size:8px;">
+<sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>pufu</b><br><br>
+<font color="#b89196">level :</font> 59<br>
+<font color="#b89196">job :</font> summoner<br>
+<font color="#b89196">build :</font> fauna<br>
+<font color="#b89196">traits :</font> creative & stubborn<br>
+<font color="#b89196">pet :</font> loli ruri ( lulu )<br>
+<font color="#b89196">hometown :</font> lasagna<br>
+<font color="#b89196">aspiration :</font> make the most<br>
+yummy sweets & desserts ♡<br>
+<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/niflheim" target="_blank"><font color="#b08087">niflheim</font></a><br>
+<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/85.mp3" target="_blank"><font color="#b08087">85.mp3</font></a>
+</font>
+<font color="#a37c81" style="position:absolute; left:270px; top:9px; font-size:8px;">
+<sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
+　　‌ <img src="https://i.imgur.com/SoynQcy.png">
+<img src="https://i.imgur.com/wvHi63T.png"> 
+<img src="https://i.imgur.com/L0QmmzZ.png">
+<br>
+<sub><sub><img width="20px" height="auto" src="https://i.imgur.com/Zttv8dJ.gif"></sub></sub> ‌ <b>adventure logs :</b><br>
+　‌ • mao, the east cave<br>
+　‌ • geffen's plateau<br>
+　‌ • orc dungeon ( !! )<br>
 　‌ • payon forest<br>
+　‌ • dragon's nest<br>
+　‌ • ravioli plain watch ( ♡ )<br>
 </div>
 </font>
 
