--- a/fashion.html
+++ b/fashion.html
@@ -344,6 +344,12 @@ p { margin: 0; }
 
 
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 10.04.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/Dy86cQI.png"/><br>
+<br>
+
+
+<br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 08.07.20 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/H6swcGe.png"/><br>
 <br>
@@ -390,12 +396,6 @@ p { margin: 0; }
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 11.08.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/kMqhFzv.png"/><br>
-<br>
-
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub> 10.24.19 <sub><img width="15" height="auto" src="https://i.imgur.com/ceWeVku.png"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/MdMNapR.png"/><br>
 <br>
 
 
