--- a/gaming.html
+++ b/gaming.html
@@ -334,7 +334,7 @@ z-index: 3;
 <img style="position:absolute; left:5px;" src="https://i.imgur.com/vA6cZGh.gif"><img style="position:absolute; left:80px; top:105px;" src="https://i.imgur.com/83XdPpp.png">
 <font color="#a37c81" style="position:absolute; left:105px; top:9px; font-size:8px;">
 <sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>pupuf</b><br><br>
-<font color="#b89196">level :</font> 120<br>
+<font color="#b89196">level :</font> 121<br>
 <font color="#b89196">job :</font> archbishop<br>
 <font color="#b89196">build :</font> exorcist<br>
 <font color="#b89196">traits :</font> quiet & caring<br>
@@ -400,7 +400,7 @@ z-index: 3;
 <img style="position:absolute; left:-5px; top:16px;" src="https://i.imgur.com/EBkBCTP.gif"><img width="43px" height="auto" style="position:absolute; left:75px; top:105px;" src="https://i.imgur.com/XPZ4Myr.png">
 <font color="#a37c81" style="position:absolute; left:105px; top:9px; font-size:8px;">
 <sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>pufs</b><br><br>
-<font color="#b89196">level :</font> 73<br>
+<font color="#b89196">level :</font> 82<br>
 <font color="#b89196">job :</font> biochemist<br>
 <font color="#b89196">build :</font> pure potter<br>
 <font color="#b89196">traits :</font> clumsy & curious<br>
@@ -433,9 +433,9 @@ z-index: 3;
 <img width="80px" height="auto" style="position:absolute; left:5px; top:5px;" src="https://i.imgur.com/aD1NVPr.png"><img style="position:absolute; left:20px; top:40px;" src="https://i.imgur.com/TfqobE8.gif">
 <font color="#a37c81" style="position:absolute; left:140px; top:9px; font-size:8px;">
 <sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>pufu</b><br><br>
-<font color="#b89196">level :</font> 59<br>
+<font color="#b89196">level :</font> 100<br>
 <font color="#b89196">job :</font> summoner<br>
-<font color="#b89196">build :</font> fauna<br>
+<font color="#b89196">build :</font> fauna + sea<br>
 <font color="#b89196">traits :</font> creative & stubborn<br>
 <font color="#b89196">pet :</font> loli ruri ( lulu )<br>
 <font color="#b89196">hometown :</font> lasagna<br>
@@ -457,6 +457,37 @@ yummy sweets & desserts ♡<br>
 　‌ • payon forest<br>
 　‌ • dragon's nest<br>
 　‌ • ravioli plain watch ( ♡ )<br>
+</div>
+</font>
+
+<br><br><br><br>
+
+<sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
+<font color="#a8958d">　<b>tree of savior</b><br>
+　　　official server : silute<br>
+　　　team name : puf<br><br><br>
+
+<div style="position:relative; left:4%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 390px; height: 170px; line-height:10px;">
+<img style="position:absolute; left:130px; border: 10px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round;" width="105px" height="auto" src="https://i.imgur.com/4511VBQ.gif">
+<font color="#a37c81" style="position:absolute; left:10px; top:9px; font-size:8px;">
+<sub><sub><sub><img width="25px" height="auto" src="https://i.imgur.com/dI0j83Y.png"></sub></sub></sub> ‌<b>pupu</b><br><br>
+　<font color="#b89196">level :</font> 108<br>
+　<font color="#b89196">main class :</font> warlock<br>
+　<font color="#b89196">build :</font> wiz1›war3<br>
+　<font color="#b89196">traits :</font> bold & childish<br>
+　<font color="#b89196">hometown :</font> klaipeda<br>
+　<font color="#b89196">aspiration :</font> go on many<br>　adventures, have fun !!<br>
+　<font color="#b89196">fav place :</font> myrkiti farm<br>
+　<font color="#b89196">fav music :</font> <a href="https://file.pooftie.me/tos/47.mp3" target="_blank"><font color="#b08087">47.mp3</font></a>
+</font>
+<font color="#a37c81" style="position:absolute; left:270px; top:9px; font-size:8px;">
+<sub><sub><sub><sub><img width="30px" height="auto" src="https://i.imgur.com/Ff73KkG.png"></sub></sub></sub></sub> <b>photo book :</b><br>
+<br>
+　　‌ • <a href="https://file.pooftie.me/tos/myrkiti%20farm.jpg" target="_blank"><font color="#b08087">myrkiti farm</font></a><br>
+　　‌ • <a href="https://file.pooftie.me/tos/vieta%20gorge.jpg" target="_blank"><font color="#b08087">vieta gorge</font></a><br>
+　　‌ • <a href="https://file.pooftie.me/tos/tenants'%20farm.jpg" target="_blank"><font color="#b08087">tenants' farm</font></a><br>
+　　‌ • <a href="https://file.pooftie.me/tos/veja%20ravine.jpg" target="_blank"><font color="#b08087">veja ravine</font></a><br>
+　　‌ • <a href="https://file.pooftie.me/tos/srautas%20gorge.jpg" target="_blank"><font color="#b08087">srautas gorge</font></a><br>
 </div>
 </font>
 
