--- a/gaming.html
+++ b/gaming.html
@@ -480,14 +480,18 @@ yummy sweets & desserts ♡<br>
 　<font color="#b89196">fav place :</font> myrkiti farm<br>
 　<font color="#b89196">fav music :</font> <a href="https://file.pooftie.me/tos/47.mp3" target="_blank"><font color="#b08087">47.mp3</font></a>
 </font>
-<font color="#a37c81" style="position:absolute; left:270px; top:9px; font-size:8px;">
+<font color="#a37c81" style="position:absolute; left:265px; top:9px; font-size:8px;">
 <sub><sub><sub><sub><img width="30px" height="auto" src="https://i.imgur.com/Ff73KkG.png"></sub></sub></sub></sub> <b>photo book :</b><br>
 <br>
-　　‌ • <a href="https://file.pooftie.me/tos/myrkiti%20farm.jpg" target="_blank"><font color="#b08087">myrkiti farm</font></a><br>
-　　‌ • <a href="https://file.pooftie.me/tos/vieta%20gorge.jpg" target="_blank"><font color="#b08087">vieta gorge</font></a><br>
-　　‌ • <a href="https://file.pooftie.me/tos/tenants'%20farm.jpg" target="_blank"><font color="#b08087">tenants' farm</font></a><br>
-　　‌ • <a href="https://file.pooftie.me/tos/veja%20ravine.jpg" target="_blank"><font color="#b08087">veja ravine</font></a><br>
-　　‌ • <a href="https://file.pooftie.me/tos/srautas%20gorge.jpg" target="_blank"><font color="#b08087">srautas gorge</font></a><br>
+• <a href="https://file.pooftie.me/tos/karolis%20springs.jpg" target="_blank"><font color="#b08087">karolis springs</font></a><br>
+• <a href="https://file.pooftie.me/tos/woods%20of%20the%20linked%20bridges.jpg" target="_blank"><font color="#b08087">woods of the linked bridges</font></a><br>
+• <a href="https://file.pooftie.me/tos/myrkiti%20farm.jpg" target="_blank"><font color="#b08087">myrkiti farm</font></a><br>
+• <a href="https://file.pooftie.me/tos/aqueduct%20bridge%20area.jpg" target="_blank"><font color="#b08087">aqueduct bridge area</font></a><br>
+• <a href="https://file.pooftie.me/tos/vieta%20gorge.jpg" target="_blank"><font color="#b08087">vieta gorge</font></a><br>
+• <a href="https://file.pooftie.me/tos/veja%20ravine.jpg" target="_blank"><font color="#b08087">veja ravine</font></a><br>
+• <a href="https://file.pooftie.me/tos/tenants'%20farm.jpg" target="_blank"><font color="#b08087">tenants' farm</font></a><br>
+• <a href="https://file.pooftie.me/tos/knidos%20jungle.jpg" target="_blank"><font color="#b08087">knidos jungle</font></a><br>
+• <a href="https://file.pooftie.me/tos/srautas%20gorge.jpg" target="_blank"><font color="#b08087">srautas gorge</font></a><br>
 </div>
 </font>
 
