--- a/gaming.html
+++ b/gaming.html
@@ -433,7 +433,7 @@ z-index: 3;
 <img width="80px" height="auto" style="position:absolute; left:5px; top:5px;" src="https://i.imgur.com/aD1NVPr.png"><img style="position:absolute; left:20px; top:40px;" src="https://i.imgur.com/TfqobE8.gif">
 <font color="#a37c81" style="position:absolute; left:140px; top:9px; font-size:8px;">
 <sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>pufu</b><br><br>
-<font color="#b89196">level :</font> 100<br>
+<font color="#b89196">level :</font> 102<br>
 <font color="#b89196">job :</font> summoner<br>
 <font color="#b89196">build :</font> fauna + sea<br>
 <font color="#b89196">traits :</font> creative & stubborn<br>
@@ -471,9 +471,9 @@ yummy sweets & desserts ♡<br>
 <img style="position:absolute; left:130px; border: 10px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round;" width="105px" height="auto" src="https://i.imgur.com/4511VBQ.gif">
 <font color="#a37c81" style="position:absolute; left:10px; top:9px; font-size:8px;">
 <sub><sub><sub><img width="25px" height="auto" src="https://i.imgur.com/dI0j83Y.png"></sub></sub></sub> ‌<b>pupu</b><br><br>
-　<font color="#b89196">level :</font> 108<br>
+　<font color="#b89196">level :</font> 204<br>
 　<font color="#b89196">main class :</font> warlock<br>
-　<font color="#b89196">build :</font> wiz1›war3<br>
+　<font color="#b89196">build :</font> wiz1›war3›ele3<br>
 　<font color="#b89196">traits :</font> bold & childish<br>
 　<font color="#b89196">hometown :</font> klaipeda<br>
 　<font color="#b89196">aspiration :</font> go on many<br>　adventures, have fun !!<br>
@@ -483,6 +483,7 @@ yummy sweets & desserts ♡<br>
 <font color="#a37c81" style="position:absolute; left:265px; top:9px; font-size:8px;">
 <sub><sub><sub><sub><img width="30px" height="auto" src="https://i.imgur.com/Ff73KkG.png"></sub></sub></sub></sub> <b>photo book :</b><br>
 <br>
+• <a href="https://file.pooftie.me/tos/uskis%20arable%20land.jpg" target="_blank"><font color="#b08087">uskis arable land</font></a><br>
 • <a href="https://file.pooftie.me/tos/karolis%20springs.jpg" target="_blank"><font color="#b08087">karolis springs</font></a><br>
 • <a href="https://file.pooftie.me/tos/woods%20of%20the%20linked%20bridges.jpg" target="_blank"><font color="#b08087">woods of the linked bridges</font></a><br>
 • <a href="https://file.pooftie.me/tos/myrkiti%20farm.jpg" target="_blank"><font color="#b08087">myrkiti farm</font></a><br>
