--- a/gaming.html
+++ b/gaming.html
@@ -460,6 +460,42 @@ yummy sweets & desserts ♡<br>
 </div>
 </font>
 
+<br><br>
+
+<sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
+<font color="#a8958d">　private server : novaro<br><br>
+
+<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 360px; height: 140px; line-height:10px; padding:5px;">
+<img style="position:absolute; left:16px; top:30px;" src="https://i.imgur.com/8b5g2Km.gif"><img style="position:absolute; left:75px; top:90px;" width="20px" height="auto" src="https://i.imgur.com/ZdfuOfA.png">
+<font color="#a37c81" style="position:absolute; left:105px; top:9px; font-size:8px;">
+<sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>pufi</b><br><br>
+<font color="#b89196">level :</font> 100<br>
+<font color="#b89196">job :</font> baby bishop<br>
+<font color="#b89196">build :</font> battle<br>
+<font color="#b89196">traits :</font> pouty & spoiled<br>
+<font color="#b89196">pet :</font> teddy bear ( fofo )<br>
+<font color="#b89196">hometown :</font> lutie<br>
+<font color="#b89196">aspiration :</font> be the absolute<br>
+cutest baby there is.<br>
+<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/xmas" target="_blank"><font color="#b08087">xmas</font></a><br>
+<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/57.mp3" target="_blank"><font color="#b08087">57.mp3</font></a>
+</font>
+<font color="#a37c81" style="position:absolute; left:240px; top:9px; font-size:8px;">
+<sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
+　　<img src="https://i.imgur.com/V6HHmNq.png"> 
+<img src="https://i.imgur.com/dvMnheM.png"> 
+<img src="https://i.imgur.com/GJwyt3N.png">
+<br>
+<sub><sub><img width="20px" height="auto" src="https://i.imgur.com/Zttv8dJ.gif"></sub></sub> ‌ <b>adventure logs :</b><br>
+　‌ • geffenia ( !! )<br>
+　‌ • thanatos tower ( ♡ )<br>
+　‌ • shrine of xi wang mu<br>
+　‌ • nogg road<br>
+　‌ • temple of sea god ( !? )<br>
+　‌ • glast heim churchyard<br>
+</div>
+</font>
+
 <br><br><br><br>
 
 <sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
