--- a/archive.html
+++ b/archive.html
@@ -3084,7 +3084,7 @@ aaand i have here a speedpaint !!<br>
 i have not been recording for a long time, i really enjoyed it and i want to record others in the future.<br>
 <br><br>
 <center><video width="350" height="auto" controls>
-<source src="https://files.catbox.moe/tkhpl5.webm" type="video/webm">
+<source src="https://file.pooftie.me/v/speedpaint.webm" type="video/webm">
 </video></center>
 <br><br>
 </font></font></font>
