--- a/i.html
+++ b/i.html
@@ -224,7 +224,6 @@ z-index: 3;
 
 <br>
 <center>
-
 <style>
 #media-player {
 	padding:25px;
@@ -268,6 +267,8 @@ progress {
 	border:none;
 	outline:none;
 	margin-right:5px;
+	text-align:left;
+	
 }
 progress::-webkit-progress-bar {
   background-color: #fff;
@@ -410,6 +411,7 @@ function resetPlayer() {
 	</div>
 
 <br>
+
 <font family = "Verdana"><font color="#80746D"><font size="1">music : <a href="https://file.pooftie.me/a/breakfast.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">breakfast .mp3</font></a></font></font></font>
 <br><br>
 </center>
