--- a/archive.html
+++ b/archive.html
@@ -1044,11 +1044,195 @@ i love helping, i want to inspire and be inspired. i must keep myself pure if i 
 
 let's go for the content !! this month i made some really cute things, i'm excited to show you <font color="#d3a5a5" style="font-size:11px;">♡</font>
 first, my secret project from poofties, finally started :</pre><br>
-<br>
 
-<center><video width="410" height="251" controls>
-<source src="https://file.pooftie.me/v/i.mp4" type="video/mp4">
-</video></center><br><br>
+<center>
+<style>
+#media-player {
+	margin-left:-10px;
+	padding:25px;
+	background-image:url(https://i.imgur.com/K9wDyg9.png);
+	background-repeat: no-repeat;
+	width:400px;
+	height:253px;
+}
+
+video {
+	background:#fff;
+	width:396px;
+	height:auto;
+}
+
+button {
+	text-indent:-9999px;
+	width:15px;
+	height:15px;
+	border:none;
+	outline:none;
+	cursor:pointer;
+	background:transparent url('https://i.imgur.com/Xo2WHU1.png') no-repeat;
+}
+
+.pause { background-position:-19px 0; }
+.stop { background-position:-38px 0; }
+.volume-plus { background-position:-57px 0; }
+.volume-minus { background-position:-76px 0; }
+.mute { background-position:-95px 0; }
+.unmute { background-position:-114px 0; }
+.replay { background-position:-133px 0; }
+
+progress {
+	color:#fff;
+	font-size:8px;
+	font-family:verdana;
+	border-radius: 5px;
+	width:290px;
+	height:6px;
+	border:none;
+	outline:none;
+	margin-right:5px;
+	text-align:left;
+	
+}
+progress::-webkit-progress-bar {
+  background-color: #fff;
+  border-radius: 7px;
+}
+progress::-webkit-progress-value {
+  background-color: #f5e4e8;
+  border-radius: 7px;
+}
+progress::-moz-progress-bar {
+  background-color: #fff;
+  border-radius: 7px;
+}
+progress::-moz-progress-value {
+  background-color: #f5e4e8;
+  border-radius: 7px;
+}
+</style>
+<script>
+document.addEventListener("DOMContentLoaded", function() { initialiseMediaPlayer(); }, false);
+
+var mediaPlayer;
+var playPauseBtn;
+var muteBtn;
+var progressBar;
+
+function initialiseMediaPlayer() {
+	mediaPlayer = document.getElementById('media-video');
+	
+	playPauseBtn = document.getElementById('play-pause-button');
+	muteBtn = document.getElementById('mute-button');
+	progressBar = document.getElementById('progress-bar');
+
+	mediaPlayer.controls = false;
+	
+	mediaPlayer.addEventListener('timeupdate', updateProgressBar, false);
+	
+	mediaPlayer.addEventListener('play', function() {
+		changeButtonType(playPauseBtn, 'pause');
+	}, false);
+	mediaPlayer.addEventListener('pause', function() {
+		changeButtonType(playPauseBtn, 'play');
+	}, false);
+	
+	mediaPlayer.addEventListener('volumechange', function(e) { 
+		if (mediaPlayer.muted) changeButtonType(muteBtn, 'unmute');
+		else changeButtonType(muteBtn, 'mute');
+	}, false);	
+	mediaPlayer.addEventListener('ended', function() { this.pause(); }, false);	
+}
+
+function togglePlayPause() {
+	if (mediaPlayer.paused || mediaPlayer.ended) {
+		changeButtonType(playPauseBtn, 'pause');
+		mediaPlayer.play();
+	}
+	else {
+		changeButtonType(playPauseBtn, 'play');
+		mediaPlayer.pause();
+	}
+}
+
+function stopPlayer() {
+	mediaPlayer.pause();
+	mediaPlayer.currentTime = 0;
+}
+
+function changeVolume(direction) {
+	if (direction === '+') mediaPlayer.volume += mediaPlayer.volume == 1 ? 0 : 0.1;
+	else mediaPlayer.volume -= (mediaPlayer.volume == 0 ? 0 : 0.1);
+	mediaPlayer.volume = parseFloat(mediaPlayer.volume).toFixed(1);
+}
+
+function toggleMute() {
+	if (mediaPlayer.muted) {
+		changeButtonType(muteBtn, 'mute');
+		mediaPlayer.muted = false;
+	}
+	else {
+		changeButtonType(muteBtn, 'unmute');
+		mediaPlayer.muted = true;
+	}
+}
+
+function replayMedia() {
+	resetPlayer();
+	mediaPlayer.play();
+}
+
+function updateProgressBar() {
+	var percentage = Math.floor((100 / mediaPlayer.duration) * mediaPlayer.currentTime);
+	progressBar.value = percentage;
+	progressBar.innerHTML = percentage + '% played';
+}
+
+function changeButtonType(btn, value) {
+	btn.title = value;
+	btn.innerHTML = value;
+	btn.className = value;
+}
+
+function loadVideo() {
+	for (var i = 0; i < arguments.length; i++) {
+		var file = arguments[i].split('.');
+		var ext = file[file.length - 1];
+		if (canPlayVideo(ext)) {
+			resetPlayer();
+			mediaPlayer.src = arguments[i];
+			mediaPlayer.load();
+			break;
+		}
+	}
+}
+
+function canPlayVideo(ext) {
+	var ableToPlay = mediaPlayer.canPlayType('video/' + ext);
+	if (ableToPlay == '') return false;
+	else return true;
+}
+
+function resetPlayer() {
+	progressBar.value = 0;
+	mediaPlayer.currentTime = 0;
+	changeButtonType(playPauseBtn, 'play');
+}
+</script>
+	<div id='media-player'>
+		<video id='media-video' controls poster="https://i.imgur.com/G5OMbgM.png" onclick="this.play()">
+			<source src='https://github.com/middlepot/file/blob/master/v/ii.mp4?raw=true' type='video/mp4'>
+		</video>
+		<div id='media-controls'>
+			<progress id='progress-bar' min='0' max='100' value='0'/>0% played</progress>
+			<button id='replay-button' class='replay' title="replay" onclick='replayMedia();'/>
+			<button id='play-pause-button' class='play' title="play" onclick='togglePlayPause();'/>　
+			<button id='stop-button' class='stop' title="stop" onclick='stopPlayer();'/>
+			<button id='volume-inc-button' title="+ volume" class='volume-plus' onclick='changeVolume("+");'/>　
+			<button id='volume-dec-button' title="- volume" class='volume-minus' onclick='changeVolume("-");'/>　
+			<button id='mute-button' class='mute' title="mute" onclick='toggleMute("true");'/>
+		</div>
+	</div>
+</center><br>
 
 </font></font></font>
 
@@ -2272,7 +2456,7 @@ by the way, i recently won a little twin stars line theme that perfectly matches
 in fact, it was a great inspiration for me to make this collage...<br>
 <br><br>
 <center><video width="250" height="auto" controls>
-<source src="https://file.pooftie.me/v/t2.webm" type="video/webm">
+<source src="https://github.com/middlepot/file/blob/master/v/t2.webm?raw=true" type="video/webm">
 </video></center><br><br>
 </font></font></font>
 
@@ -3084,7 +3268,7 @@ aaand i have here a speedpaint !!<br>
 i have not been recording for a long time, i really enjoyed it and i want to record others in the future.<br>
 <br><br>
 <center><video width="350" height="auto" controls>
-<source src="https://file.pooftie.me/v/speedpaint.webm" type="video/webm">
+<source src="https://github.com/middlepot/file/blob/master/v/speedpaint.webm?raw=true" type="video/webm">
 </video></center>
 <br><br>
 </font></font></font>
@@ -3781,7 +3965,7 @@ i love him so so so so so much <img src="https://i.imgur.com/g5pvtoc.gif"/><img 
 today i'm going to finally show you something that you asked me since the videos on my phone, i'll show you a little bit of my notebook :<br>
 <br><br>
 <center><video width="350" height="auto" controls>
-<source src="https://file.pooftie.me/v/pc.webm" type="video/webm">
+<source src="https://github.com/middlepot/file/blob/master/v/pc.webm?raw=true" type="video/webm">
 </video></center>
 <br><br>
 </font></font></font>
@@ -4101,13 +4285,13 @@ i hope you like it :<br>
 <br>
 <br><br>
 <center><video width="250" height="auto" controls>
-<source src="https://file.pooftie.me/v/phone.webm" type="video/webm">
+<source src="https://github.com/middlepot/file/blob/master/v/phone.webm?raw=true" type="video/webm">
 </video></center><br><br>
 <center><video width="250" height="auto" controls>
-<source src="https://file.pooftie.me/v/m.webm" type="video/webm">
+<source src="https://github.com/middlepot/file/blob/master/v/m.webm?raw=true" type="video/webm">
 </video></center><br><br>
 <center><video width="250" height="auto" controls>
-<source src="https://file.pooftie.me/v/t.webm" type="video/webm">
+<source src="https://github.com/middlepot/file/blob/master/v/t.webm?raw=true" type="video/webm">
 </video></center>
 <br><br>
 </font></font></font>
