--- a/blog.html
+++ b/blog.html
@@ -730,7 +730,7 @@ function resetPlayer() {
 </script>
 	<div id='media-player'>
 		<video id='media-video' controls poster="https://i.imgur.com/G5OMbgM.png" onclick="this.play()">
-			<source src='https://github.com/middlepot/file/blob/master/v/ii.mp4?raw=true' type='video/mp4'>
+			<source src='https://file.pooftie.me/v/ii.mp4' type='video/mp4'>
 		</video>
 		<div id='media-controls'>
 			<progress id='progress-bar' min='0' max='100' value='0'/>0% played</progress>
