--- a/archive.html
+++ b/archive.html
@@ -1220,7 +1220,7 @@ function resetPlayer() {
 </script>
 	<div id='media-player'>
 		<video id='media-video' controls poster="https://i.imgur.com/G5OMbgM.png" onclick="this.play()">
-			<source src='https://github.com/middlepot/file/blob/master/v/ii.mp4?raw=true' type='video/mp4'>
+			<source src='https://file.pooftie.me/v/i.mp4' type='video/mp4'>
 		</video>
 		<div id='media-controls'>
 			<progress id='progress-bar' min='0' max='100' value='0'/>0% played</progress>
@@ -2456,7 +2456,7 @@ by the way, i recently won a little twin stars line theme that perfectly matches
 in fact, it was a great inspiration for me to make this collage...<br>
 <br><br>
 <center><video width="250" height="auto" controls>
-<source src="https://github.com/middlepot/file/blob/master/v/t2.webm?raw=true" type="video/webm">
+<source src="https://file.pooftie.me/v/t2.webm" type="video/webm">
 </video></center><br><br>
 </font></font></font>
 
@@ -3268,7 +3268,7 @@ aaand i have here a speedpaint !!<br>
 i have not been recording for a long time, i really enjoyed it and i want to record others in the future.<br>
 <br><br>
 <center><video width="350" height="auto" controls>
-<source src="https://github.com/middlepot/file/blob/master/v/speedpaint.webm?raw=true" type="video/webm">
+<source src="https://files.catbox.moe/pfc4y6.webm" type="video/webm">
 </video></center>
 <br><br>
 </font></font></font>
@@ -3965,7 +3965,7 @@ i love him so so so so so much <img src="https://i.imgur.com/g5pvtoc.gif"/><img 
 today i'm going to finally show you something that you asked me since the videos on my phone, i'll show you a little bit of my notebook :<br>
 <br><br>
 <center><video width="350" height="auto" controls>
-<source src="https://github.com/middlepot/file/blob/master/v/pc.webm?raw=true" type="video/webm">
+<source src="https://file.pooftie.me/v/pc.webm" type="video/webm">
 </video></center>
 <br><br>
 </font></font></font>
@@ -4285,13 +4285,13 @@ i hope you like it :<br>
 <br>
 <br><br>
 <center><video width="250" height="auto" controls>
-<source src="https://github.com/middlepot/file/blob/master/v/phone.webm?raw=true" type="video/webm">
+<source src="https://file.pooftie.me/v/phone.webm" type="video/webm">
 </video></center><br><br>
 <center><video width="250" height="auto" controls>
-<source src="https://github.com/middlepot/file/blob/master/v/m.webm?raw=true" type="video/webm">
+<source src="https://file.pooftie.me/v/m.webm" type="video/webm">
 </video></center><br><br>
 <center><video width="250" height="auto" controls>
-<source src="https://github.com/middlepot/file/blob/master/v/t.webm?raw=true" type="video/webm">
+<source src="https://file.pooftie.me/v/t.webm" type="video/webm">
 </video></center>
 <br><br>
 </font></font></font>
