--- a/portfolio.html
+++ b/portfolio.html
@@ -528,7 +528,7 @@ function resetPlayer() {
 </script>
 	<div id='media-player'>
 		<video id='media-video' controls poster="https://i.imgur.com/7TEHVIB.png" onclick="this.play()">
-			<source src='https://github.com/middlepot/file/blob/master/v/i.mp4?raw=true' type='video/mp4'>
+			<source src='https://file.pooftie.me/v/i.mp4' type='video/mp4'>
 		</video>
 		<div id='media-controls'>
 			<progress id='progress-bar' min='0' max='100' value='0'/>0% played</progress>
