--- a/credits.html
+++ b/credits.html
@@ -345,8 +345,8 @@ it is difficult to be completely transparent about how much content is edited or
 <font family = "Verdana"><font color="#AD9F97"><font style="font-size:9px">
 　　html : github<br>
 　　image : imgur / file.pooftie.me<br>
+　　video : catbox / file.pooftie.me<br>
 　　audio : file.pooftie.me<br>
-　　video : file.pooftie.me<br>
 　　rar : file.pooftie.me<br>
 <br>
 </font></font></font>
