--- a/i.html
+++ b/i.html
@@ -245,7 +245,7 @@ button {
 	height:18px;
 	border:none;
 	outline:none;
-	cursor:pointer;
+	cursor: url(https://i.imgur.com/EZZ5Vol.png), progress;
 	background:transparent url('https://i.imgur.com/Xo2WHU1.png') no-repeat;
 }
 
