--- a/links.html
+++ b/links.html
@@ -330,6 +330,8 @@ z-index: 3;
 <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b89c9f">
  my html stuff :</font><br>
 <div style="border: none; width: 100px; height: 150px; margin-top:6px; overflow-x:hidden; line-height:13px; padding-right:5px; padding-left:5px;">
+<a id="ooo" href="https://care.pooftie.me" target="_blank" >self care archive</a>
+<br>
 <a id="ooo" href="https://world.pooftie.me" target="_blank" >my little world</a>
 <br>
 <a id="ooo" href="https://ascii.pooftie.me" target="_blank" >ascii art materials</a>
