--- a/portfolio.html
+++ b/portfolio.html
@@ -565,6 +565,8 @@ function resetPlayer() {
 <br>
 <img width="280px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
 <br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/7fbv0PA.gif"> <img width="200px" height="auto" src="https://i.imgur.com/2rRb5tt.gif">
+<br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/EahGtcV.gif">
 <br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/OLF2amH.gif">
