--- a/gaming.html
+++ b/gaming.html
@@ -496,6 +496,70 @@ cutest baby there is.<br>
 </div>
 </font>
 
+<br><br>
+
+<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 360px; height: 140px; line-height:10px; padding:5px;">
+<img width="70px" height="auto" style="position:absolute; left:5px; top:5px;" src="https://i.imgur.com/lwXzuPt.png"><img style="position:absolute; left:47px; top:45px;" src="https://i.imgur.com/cpLLYIa.gif">
+<font color="#a37c81" style="position:absolute; left:105px; top:9px; font-size:8px;">
+<sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>puft</b><br><br>
+<font color="#b89196">level :</font> 102<br>
+<font color="#b89196">job :</font> baby wanderer<br>
+<font color="#b89196">build :</font> support<br>
+<font color="#b89196">traits :</font> dainty & polite<br>
+<font color="#b89196">pet :</font> miyabi ningyo ( mimi )<br>
+<font color="#b89196">hometown :</font> amatsu<br>
+<font color="#b89196">aspiration :</font> make you proud..<br>
+<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/ama_fild01" target="_blank"><font color="#b08087">ama_fild01</font></a><br>
+<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/76.mp3" target="_blank"><font color="#b08087">76.mp3</font></a>
+</font>
+<font color="#a37c81" style="position:absolute; left:240px; top:9px; font-size:8px;">
+<sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
+　　<img src="https://i.imgur.com/R6R9Aps.png"> 
+<img src="https://i.imgur.com/Wia6z5k.png">
+<img src="https://i.imgur.com/ceXZWNw.png">
+<br>
+<sub><sub><img width="20px" height="auto" src="https://i.imgur.com/Zttv8dJ.gif"></sub></sub> ‌ <b>adventure logs :</b><br>
+　‌ • bangungot hospital<br>
+　‌ • suei long gon ( ♡ )<br>
+　‌ • the royal tomb<br>
+　‌ • hermit's checkers<br>
+　‌ • tatami maze ( ♫ )<br>
+　‌ • brasilis jungle<br>
+</div>
+</font>
+
+<br><br>
+
+<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 360px; height: 140px; line-height:10px; padding:5px;">
+<img width="60px" height="auto" style="position:absolute; left:2px; top:5px;" src="https://i.imgur.com/4lAMPPf.png"><img style="position:absolute; left:40px; top:30px;" src="https://i.imgur.com/9vZu0Yu.gif">
+<font color="#a37c81" style="position:absolute; left:105px; top:9px; font-size:8px;">
+<sub><img src="https://i.imgur.com/GMn79dn.png"></sub> ‌ <b>pufti</b><br><br>
+<font color="#b89196">level :</font> 99<br>
+<font color="#b89196">job :</font> baby trouvere<br>
+<font color="#b89196">build :</font> soloist<br>
+<font color="#b89196">traits :</font> airhead & jester<br>
+<font color="#b89196">pet :</font> marionette ( doll )<br>
+<font color="#b89196">hometown :</font> geffen<br>
+<font color="#b89196">aspiration :</font> pet your pets<br>
+<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/nif_fild01" target="_blank"><font color="#b08087">nif_fild01</font></a><br>
+<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/50.mp3" target="_blank"><font color="#b08087">50.mp3</font></a>
+</font>
+<font color="#a37c81" style="position:absolute; left:240px; top:9px; font-size:8px;">
+<sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
+　　<img src="https://i.imgur.com/4SixLJb.png"> 
+<img src="https://i.imgur.com/PwoG1tv.png">
+<img src="https://i.imgur.com/f0aCzZT.png">
+<br>
+<sub><sub><img width="20px" height="auto" src="https://i.imgur.com/Zttv8dJ.gif"></sub></sub> ‌ <b>adventure logs :</b><br>
+　‌ • skellington ( ♡♡ )<br>
+　‌ • turtle island<br>
+　‌ • glast heim castle ( !! )<br>
+　‌ • geffenia<br>
+　‌ • toy factory ( ♡ )<br>
+　‌ • orc village<br>
+</div>
+</font>
+
 <br><br><br><br>
 
 <sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
